Closed Bug 757611 Opened 12 years ago Closed 12 years ago

error: base operand of '->' has non-pointer type AutoFile after bug #307181

Categories

(Toolkit :: Application Update, defect)

x86
OpenBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla15

People

(Reporter: gaston, Assigned: gaston)

References

Details

Attachments

(1 file)

After landing of #307181 build fails on OpenBSD with the following error :

toolkit/mozapps/update/updater/updater.cpp: In function 'int ensure_copy(const char*, const char*)':
toolkit/mozapps/update/updater/updater.cpp:594: error: base operand of '->' has non-pointer type 'AutoFile'

Looking at stdio.h which defines ferror():
 $grep ferr /usr/include/stdio.h            
int      ferror(FILE *);
#define __sferror(p)    (((p)->_flags & __SERR) != 0)
#define ferror(p)       (!__isthreaded ? __sferror(p) : (ferror)(p))

the preprocessed line ends up as :
    if ((!__isthreaded ? (((infile)->_flags & 0x0040) != 0) : (ferror)(infile))) {

which shows that ferror() expects a FILE* and nothing else..
Depends on: bgupdates
Assignee: nobody → landry
Attachment #626182 - Flags: review?(ehsan)
Attachment #626182 - Flags: review?(ehsan) → review+
Blocks: bgupdates
No longer depends on: bgupdates
https://hg.mozilla.org/mozilla-central/rev/bfb4508c62aa
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: