Bug 757611 - pass a FILE* to ferror(), fixes build on OpenBSD - r=ehsan